Changelog
---------

Version 0.1.2
~~~~~~~~~~~~~

Date: unreleased


Version 0.1.1
~~~~~~~~~~~~~

Date: 2014-04-06

- Connection pooling is splited to separate module (it preserves same api, but should be
  declared as additional dependency if you want use it).
- Set clojure 1.6 as default clojure version.
- Add apache-commonds dbcp 2.0 connection pool support.
- Breaking change: rename transaction strategy methods to: begin! rollback! commit!
- Breaking change: call-in-transaction now accepts options map insted of named parameters.
- Fix bugs on marking transaction rollback-only.
- Allow set isolation level for transaction.
- Allow set read-only transaction.

Version 0.1-rc1
~~~~~~~~~~~~~~~

Date: 2014-02-16

- jdk6 support added (`java.lang.AutoCloseable` interface is replaced
  with `java.io.Closeable` interface)
- Add ISQLStatement protocol for make easy extend query (and friends) function parameter.
- Performance improvements (with micro bench suite)
- Changed syntax for `with-connection` for more idiomatic way (previous behavior
  mantained for backward compatibility).

Version 0.1-beta5
~~~~~~~~~~~~~~~~~

Date: 2014-01-21

Note: this should be a last beta release.

- Query functions (make-query, query and with-query) now accepts prepared statements.
- Add ability to extend all behavior between some type is set as parameter to prepared statement
  and retrieved from resultset thanks to ``ISQLType`` and ``ISQLResultSetReadColumn`` (this allows
  extend not default types, making it compatible for pass as paramater to jdbc and extend sql types for
  automatically convert them to custom types when are retrieved from resultset).
- Refactored jdbc.types namespace (rename QueryResult to ResultSet and put each type in their own
  namespace and add additional util functions for each type).
- Move all transactions logic to separate namespace, removing it from a main jdbc namespace (breaking change).